...

  return (
    <>
      <Stack.Screen options={{ headerShown: false }} />
      <NativeTabs tintColor="#007AFF">
        <NativeTabs.Trigger name="(home)" testID="tab-home">
          <NativeTabs.Trigger.Label>Home</NativeTabs.Trigger.Label>
          <NativeTabs.Trigger.Icon
            sf={{
              default: 'house',
              selected: 'house.fill',
            }}
            md="home"
          />
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="(products)" testID="tab-products">
          <NativeTabs.Trigger.Label>Products</NativeTabs.Trigger.Label>
          <NativeTabs.Trigger.Icon
            sf={{
              default: 'bag',
              selected: 'bag.fill',
            }}
            md="shopping_bag"
...
          />
          {cartItemCount > 0 && (
            <NativeTabs.Trigger.Badge>{String(cartItemCount)}</NativeTabs.Trigger.Badge>
          )}
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="(profile)" testID="tab-profile">
          <NativeTabs.Trigger.Label>Profile</NativeTabs.Trigger.Label>
          <NativeTabs.Trigger.Icon
            sf={{
              default: 'person',
              selected: 'person.fill',
            }}
            md="person"
...
